--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,6 +106,7 @@ jobs:
 
   typescript-build:
     runs-on: ubuntu-latest
+    needs: [update-pnpm-caches]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
