--- a/.github/actions/common-setup/action.yml
+++ b/.github/actions/common-setup/action.yml
@@ -14,19 +14,23 @@ runs:
         node-version: ${{ inputs.node-version }}
 
     - name: "Install pnpm"
-      shell: bash
-      run: npm install pnpm@8 -g
+      uses: pnpm/action-setup@v3
+      with:
+        version: 9
+        run_install: false
 
     - name: "Get pnpm store"
       shell: bash
       run: |
         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-    - name: "Restore pnpm store"
-      uses: actions/cache/restore@v4
+    - name: "Setup pnpm cache"
+      uses: actions/cache@v4
       with:
         path: ${{ env.STORE_PATH }}
         key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
 
     - name: "Install dependencies with pnpm"
       shell: bash
