--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         node-version: ${{ fromJSON(needs.compute-matricies.outputs.node-versions) }}
     steps:
       - uses: actions/checkout@v4
-      - uses: ./github/actions/common-setup
+      - uses: ./.github/actions/common-setup
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -99,7 +99,7 @@ jobs:
     needs: [update-pnpm-caches]
     steps:
       - uses: actions/checkout@v4
-      - uses: ./github/actions/common-setup
+      - uses: ./.github/actions/common-setup
         with:
           node-version: 18.x
       - run: pnpm build
