--- a/.github/actions/common-setup/action.yml
+++ b/.github/actions/common-setup/action.yml
@@ -22,7 +22,7 @@ runs:
     - name: "Get pnpm store"
       shell: bash
       run: |
-        echo "STORE_PATH=$(pnpm store path | tr -d '\n')" >> $GITHUB_ENV
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
     - name: "Setup pnpm cache"
       uses: actions/cache@v4
