--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "dind",
         "dnsrr",
         "docgen",
+        "dockerode",
         "Domainname",
         "dprint",
         "endport",
@@ -44,6 +45,7 @@
         "IPAM",
         "janedoe",
         "kmem",
+        "leonitous",
         "leonitousconforti",
         "memswap",
         "moby",
@@ -65,6 +67,7 @@
         "NUMA",
         "ONBUILD",
         "onewriter",
+        "openapi",
         "operatingsystem",
         "packagejson",
         "Pids",
