--- a/package.json
+++ b/package.json
@@ -45,51 +45,51 @@
         "ssh2": "^1.15.0"
     },
     "devDependencies": {
-        "@babel/cli": "7.24.5",
-        "@babel/core": "7.24.5",
-        "@babel/plugin-transform-export-namespace-from": "7.24.1",
-        "@babel/plugin-transform-modules-commonjs": "7.24.1",
-        "@effect/build-utils": "0.7.6",
-        "@effect/cli": "0.36.21",
+        "@babel/cli": "7.24.7",
+        "@babel/core": "7.24.7",
+        "@babel/plugin-transform-export-namespace-from": "7.24.7",
+        "@babel/plugin-transform-modules-commonjs": "7.24.7",
+        "@effect/build-utils": "0.7.7",
+        "@effect/cli": "0.36.44",
         "@effect/docgen": "0.4.3",
         "@effect/eslint-plugin": "0.1.2",
-        "@effect/experimental": "0.16.2",
+        "@effect/experimental": "0.16.25",
         "@effect/language-service": "0.1.0",
-        "@effect/platform": "0.53.2",
-        "@effect/platform-node": "0.49.2",
-        "@effect/printer": "0.33.12",
-        "@effect/printer-ansi": "0.33.12",
-        "@effect/schema": "0.66.16",
-        "@effect/typeclass": "0.24.12",
-        "@effect/vitest": "0.4.2",
-        "@rollup/wasm-node": "4.17.2",
-        "@types/node": "20.12.11",
+        "@effect/platform": "0.57.0",
+        "@effect/platform-node": "0.51.9",
+        "@effect/printer": "0.33.27",
+        "@effect/printer-ansi": "0.33.27",
+        "@effect/schema": "0.67.22",
+        "@effect/typeclass": "0.24.27",
+        "@effect/vitest": "0.5.11",
+        "@rollup/wasm-node": "4.18.0",
+        "@types/node": "20.14.2",
         "@types/ssh2": "1.15.0",
         "@types/tar-fs": "2.0.4",
-        "@typescript-eslint/eslint-plugin": "7.8.0",
-        "@typescript-eslint/parser": "7.8.0",
-        "@typescript-eslint/utils": "7.8.0",
+        "@typescript-eslint/eslint-plugin": "7.12.0",
+        "@typescript-eslint/parser": "7.12.0",
+        "@typescript-eslint/utils": "7.12.0",
         "@vitest/coverage-v8": "1.6.0",
         "babel-plugin-annotate-pure-calls": "0.4.0",
         "ci-info": "4.0.0",
-        "effect": "3.1.3",
+        "effect": "3.3.1",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.1",
         "eslint-plugin-codegen": "0.28.0",
-        "eslint-plugin-deprecation": "2.0.0",
+        "eslint-plugin-deprecation": "3.0.0",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
-        "fast-check": "3.18.0",
-        "prettier": "3.2.5",
+        "fast-check": "3.19.0",
+        "prettier": "3.3.1",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.5.0",
-        "rimraf": "5.0.5",
+        "rimraf": "5.0.7",
         "tar-fs": "3.0.6",
-        "tsx": "4.9.3",
-        "typescript": "5.4.5",
-        "vite": "5.2.11",
+        "tsx": "4.15.1",
+        "typescript": "rc",
+        "vite": "5.2.13",
         "vitest": "1.6.0",
         "ws": "8.17.0"
     },
@@ -106,10 +106,5 @@
         "access": "public",
         "directory": "dist",
         "provenance": true
-    },
-    "pnpm": {
-        "patchedDependencies": {
-            "@effect/build-utils@0.7.6": "patches/@effect__build-utils@0.7.6.patch"
-        }
     }
 }
