update pages workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,13 +23,13 @@ jobs:
           version: 9
           run_install: false
       - run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      # - name: "Setup pnpm cache"
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ${{ env.STORE_PATH }}
-      #     key: ${{ runner.os }}-node18.x-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pnpm-store-
+      - name: "Setup pnpm cache"
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-node18.x-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       - run: pnpm install
       - run: pnpm docgen
       - uses: actions/configure-pages@v5
