--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
         "runc",
         "runtimes",
         "sbyte",
+        "schemagen",
         "seccomp",
         "serveraddress",
         "shmsize",
