--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
+
       - uses: actions/setup-node@v4
         with:
           node-version: "18.x"
@@ -25,7 +28,6 @@ jobs:
       - name: "Install pnpm"
         uses: pnpm/action-setup@v4
         with:
-          version: 9
           run_install: false
       - name: "Get pnpm store"
         run: |
