--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
+          file: docker/agent-${{ matrix.dockerfile }}.dockerfile
           outputs: type=docker,dest=/tmp/${{ matrix.dockerfile }}-dind-docker-image.tar
       - uses: actions/upload-artifact@v4
         with:
@@ -92,6 +92,7 @@ jobs:
 
   # Builds and lints the typescript code
   typescript-build:
+    if: false
     runs-on: ubuntu-latest
     needs: [update-pnpm-caches]
     steps:
@@ -107,7 +108,7 @@ jobs:
   docker-publish:
     runs-on: ubuntu-latest
     needs: [docker-build, compute-matricies]
-    if: ${{ contains(github.event.head_commit.modified, 'test/data/agent-http.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-https.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-socket.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-ssh.dockerfile') }}
+    if: ${{ contains(github.event.head_commit.modified, 'docker/agent-http.dockerfile') || contains(github.event.head_commit.modified, 'docker/agent-https.dockerfile') || contains(github.event.head_commit.modified, 'docker/agent-socket.dockerfile') || contains(github.event.head_commit.modified, 'docker/agent-ssh.dockerfile') }}
     environment: "Docker release"
     strategy:
       matrix:
@@ -136,10 +137,11 @@ jobs:
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
+          file: docker/agent-${{ matrix.dockerfile }}.dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
   docker-engine-tests:
+    if: false
     needs: [compute-matricies, docker-build, typescript-build]
     runs-on: ${{ matrix.os }}
     defaults:
