--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "tar-fs": "^3.0.6",
         "undici": "^6.19.4"
     },
+    "packageManager": "pnpm@9.4.0",
     "engines": {
         "node": ">=18.0.0"
     },
